Implementacja logowania i przechowywania token JWT w localStorage